# projet_blockchain

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/processed/: btc_spx_returns.csv  btc_spx_tech.csv
src/: app.py  check_csv.py  main.py  metrics.py  quick_plots.py
src/etl/: extract.py  load.py  transform.py
