[project]
name = "projet-blockchain"
version = "0.1.0"
description = ""
authors = [
    {name = "nini",email = "niama.elkamal@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.3.2,<3.0.0)",
    "numpy (>=2.3.3,<3.0.0)",
    "yfinance (>=0.2.66,<0.3.0)",
    "matplotlib (>=3.10.6,<4.0.0)",
    "statsmodels (>=0.14.5,<0.15.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "typer (>=0.19.2,<0.20.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "streamlit (>=1.50.0,<2.0.0)",
    "scipy (>=1.16.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)",
    "black (>=25.9.0,<26.0.0)",
    "isort (>=6.0.1,<7.0.0)"
]
